@@ -27,6 +27,7 @@ Attachments are now processed in the order they were attached.
 * Removed all hard coded references to wp-content.
 * Fixed bug where caption wasn't being filled out in templates.
 * Updated direct DB access to use standard methods.
+* Added attachment template for non-audio/image/video attachments.
 
 = 1.5.5 (2013.05.02) =
 * Added ability to run a manual check with debugging output.
